--- a/package.json
+++ b/package.json
@@ -10,33 +10,33 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.17.5",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
-    "expo": "~45.0.0",
-    "expo-av": "^11.2.3",
-    "expo-image-picker": "^13.1.1",
-    "expo-status-bar": "~1.3.0",
-    "expo-updates": "~0.13.2",
-    "expo-web-browser": "^10.2.1",
+    "expo": "^48.0.0",
+    "expo-av": "~13.2.1",
+    "expo-image-picker": "~14.1.1",
+    "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.16.3",
+    "expo-web-browser": "~12.1.1",
     "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "luxon": "^2.4.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.3",
     "react-native-elements": "3.4.2",
     "react-native-raw-bottom-sheet": "^2.2.0",
-    "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "~3.11.1",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
     "react-native-vector-icons": "^9.1.0",
-    "react-native-web": "0.17.7",
+    "react-native-web": "~0.18.11",
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
